--- a/locales/ka/sidebar.json
+++ b/locales/ka/sidebar.json
@@ -5,7 +5,7 @@
   "horses": "ცხენები",
   "horsesSub": "შოუ / სასწავლო / პენსიაზე გასული",
   "gallery": "გალერეა",
-  "standings": "ჩანაწერები",
+  "standings": "რეიტინგები",
   "rules": "წესები და რეგულაციები",
   "sponsors": "სპონსორები",
   "news": "სიახლეები",
