--- a/locales/ka/common.json
+++ b/locales/ka/common.json
@@ -2,7 +2,10 @@
   "home": {
     "scrollText": "დაბლა ჩასვლა",
     "title": "ლაზარე ოსიაშვილი",
-    "logoAlt": "ფედერაციის ლოგო"
+    "logoAlt": "ფედერაციის ლოგო",
+    "horses": "ცხენები",
+    "events": "ღონისძიებები",
+    "news": "სიახლეები"
   },
   "header": {
     "contact": "კონტაქტი",
