add start list in time schedule

--- a/locales/ka/events.json
+++ b/locales/ka/events.json
@@ -1,6 +1,6 @@
 {
   "details": {
-    "timeSchedule": "დროის განრიგი",
+    "timeSchedule": "შეჯიბრის განრიგი",
     "results": "შედეგები",
     "photos": "ფოტოები",
     "loading": "იტვირთება…",
