add tab icon and some styles

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -10,7 +10,7 @@
   "header": {
     "contact": "contact",
     "languageEnglish": "EN",
-    "languageGeorgian": "GEO",
+    "languageGeorgian": "ქარ",
     "openMenu": "Open menu"
   }
 }
