--- a/locales/ka/common.json
+++ b/locales/ka/common.json
@@ -9,7 +9,7 @@
   },
   "header": {
     "contact": "კონტაქტი",
-    "languageEnglish": "ინგ",
+    "languageEnglish": "EN",
     "languageGeorgian": "ქარ",
     "openMenu": "მენიუს გახსნა"
   }
