add corect gmail, fix x, fix mailgun

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -8,7 +8,7 @@
     "news": "News"
   },
   "header": {
-    "contact": "contact",
+    "contact": "CONTACT",
     "languageEnglish": "EN",
     "languageGeorgian": "ქარ",
     "openMenu": "Open menu"
