--- a/locales/ka/events.json
+++ b/locales/ka/events.json
@@ -28,5 +28,28 @@
   "page": {
     "error": "ღონისძიებების ჩატვირთვა ვერ მოხერხდა",
     "noEvents": "ღონისძიებები ვერ მოიძებნა"
+  },
+  "form": {
+    "title": "მონაწილეობის რეგისტრაცია",
+    "riderName": "მხედრის სახელი",
+    "phone": "ტელეფონის ნომერი",
+    "email": "ელ. ფოსტა",
+    "horseName": "ცხენის სახელი",
+    "class": "კლასი",
+    "selectClass": "აირჩიეთ კლასი",
+    "addHorse": "ცხენის დამატება",
+    "horseList": "ცხენების სია",
+    "submit": "გაგზავნა",
+    "sending": "იგზავნება...",
+    "success": "წარმატებით გაიგზავნა! მალე დაგიკავშირდებით.",
+    "fail": "ფორმის გაგზავნა ვერ მოხერხდა. სცადეთ მოგვიანებით.",
+    "error": "გაგზავნისას მოხდა შეცდომა.",
+    "unknownEvent": "უცნობი ღონისძიება"
+  },
+  "timer": {
+    "daysToGo": " დღე დარჩა",
+    "eventDay": "ღონისძიების დღე!",
+    "participantForm": "მონაწილეობის ფორმა",
+    "closeForm": "ფორმის დახურვა"
   }
 }
