CHANGE START LIST KA VERSION

--- a/locales/ka/events.json
+++ b/locales/ka/events.json
@@ -10,7 +10,7 @@
   "timeSchedule": {
     "noCompetitions": "ამ ღონისძიებისთვის შეჯიბრებები არ არის ხელმისაწვდომი.",
     "presentedBy": "წარმოდგენილი საქართველოს საცხენოსნო ფედერაციის მიერ",
-    "startList": "საწყისი სია",
+    "startList": "მონაწილეთა სია",
     "results": "შედეგები"
   },
   "results": {
